--- a/app/views/_footer.jade
+++ b/app/views/_footer.jade
@@ -3,7 +3,4 @@ footer
   p.pull-right
     a(href='#') Back to top
   p
-    | © 2014 Fig, Inc. ·
-    a(href='#') Privacy
-    | ·
-    a(href='#') Terms
+    | © 2014 Philmod ·
