--- a/app/views/_header.jade
+++ b/app/views/_header.jade
@@ -12,30 +12,9 @@ header
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href="#") ALARMclock
+            a.navbar-brand(href="#") WCBrazil
           
           .collapse.navbar-collapse
             ul.nav.navbar-nav
-              li
-                a(href="#about") About
-              li  
-                a(href="#contact") Contact
 
             ul.nav.navbar-nav.pull-right
-              - if (!user)
-                li
-                  a.button-href-wrapper(href='/auth/facebook?login=true&next=' + next + '&popup=' + (popup ? 'true' : 'false'))
-                    button.btn.btn-facebook
-                      i.fa.fa-facebook
-                        |  | Login with Facebook
-              - else
-                li.dropdown
-                  a.dropdown-toggle(href='#', data-toggle='dropdown')
-                    = username
-                    b.caret
-                  ul.dropdown-menu
-                    li
-                      a(href='settings') Settings
-                    li.divider
-                    li
-                      a(href="logout") Logout
