--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,7 +6,7 @@ block content
   .container.games
     .row
       each game in games
-        div(class="col-lg-" + 12/games.length)
+        div(class="col-lg-" + 12/games.length + " game")
           h2 
             = game.teams[0]
             |  - 
@@ -17,7 +17,7 @@ block content
             - var minutes = new Date(game.time).getMinutes();
             - if (minutes === 0) minutes = '00';
             = minutes
-          h3 
+          h3(class="game-" + game.teams[0] + "-" + game.teams[1])
             = game.score[0]
             |  - 
             = game.score[1]
@@ -28,3 +28,4 @@ block content
   script(src='js/lib/jquery/jquery-2.0.3.min.js')
   script(src='bootstrap/js/bootstrap.min.js')
   script(src='bootstrap/js/holder.js')
+  script(src='js/main.js')
