--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,35 +51,6 @@ ul.navbar-nav a.button-href-wrapper {
   padding-bottom: 8px;
 }
 
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  height: 500px;
-  margin-bottom: 60px;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
-
-
-
 /* GAMES CONTENT
 -------------------------------------------------- */
 
@@ -90,137 +61,34 @@ ul.navbar-nav a.button-href-wrapper {
 }
 
 /* Center align the text within the three columns below the carousel */
-.games .col-lg-4 {
+.game {
   text-align: center;
   margin-bottom: 20px;
+  background-color: #F0F0F0;
+  border: 2px solid;
+  border-radius: 5px;
 }
-.games .col-lg-3 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-.games .col-lg-6 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-.games .col-lg-12 {
-  text-align: center;
-  margin-bottom: 20px;
-}
+
 .games h2 {
   font-weight: normal;
+  font-size: 25px;
 }
 
-
-/* Featurettes
-------------------------- */
-
-.featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+.col-lg-3 {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 24%;
 }
-
-/* Thin out the marketing headings */
-.featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -1px;
+.col-lg-4 {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 31.6%;
 }
-
-
-
-/* SETTINGS PAGE
-------------------------- */
-
-#settings {
-	min-height: 600px;
+.col-lg-6 {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 49%;
 }
-
-/* Connections */
-.connection {
-  padding: 10px 0;
-  margin-top: 20px;
-  border-top: 1px solid #ccc;
-  overflow: hidden;
-}
-.connection a {
-  cursor: pointer;
-}
-.connection .connection-title {
-  padding-top: 8px;
-  padding-left: 10px;
-  width: 130px;
-  float: left;
-  font-size: 12px;
-  font-weight: bold;
-}
-.connection .connection-title p {
-  padding-left: 21px;
-  line-height: 16px;
-  margin: 0;
-}
-.connection .connection-title .twitter {
-  background: url("/img/sources/twitter-16px.png") left no-repeat;
-}
-.connection .connection-title .facebook {
-  background: url("/img/sources/facebook-16px.png") left no-repeat;
-}
-.connection .connection-title .google {
-  background: url("/img/sources/google-16px.png") left no-repeat;
-}
-.connection .connection-title .instagram {
-  background: url("/img/sources/instagram-16px.png") left no-repeat;
-}
-.connection .connection-actions {
-  float: left;
-  width: 629px;
-}
-.connection .connection-actions .button {
-  margin-top: 1px;
-}
-.connection .connection-actions img {
-  display: block;
-  float: left;
-  width: 60px;
-  height: 60px;
-  padding: 1px;
-  background: #fff;
-  border: 1px solid #ddd;
-  margin-right: 10px;
-}
-.connection .connection-actions .connection-actions-inner {
-  width: 555px;
-  padding-top: 5px;
-  float: left;
-}
-.connection .connection-actions .connection-actions-inner p {
-  margin: 0 0 5px;
-}
-.connection .connection-actions .connection-actions-inner ul {
-  margin: 0 0 10px;
-  padding: 0;
-  list-style: none;
-}
-.connection .connection-actions .connection-actions-inner ul li {
-  margin-bottom: 2px;
-}
-.connection .connection-actions .connection-actions-inner ul li label {
-  font-size: 12px;
-  color: #666;
-}
-.connection .connection-actions .connection-actions-inner ul li label input {
-  vertical-align: middle;
-}
-.connection .connection-actions .connection-actions-inner ul li label strong {
-  padding-left: 5px;
-  font-weight: normal;
-}
-.connection .connection-actions .connection-actions-inner .unlink {
-  color: #b30c00;
-}
-.connection .connection-actions .connection-actions-inner .unlink:hover {
-  color: #000;
-}
-
-
 
 
 /* RESPONSIVE CSS
@@ -229,7 +97,7 @@ ul.navbar-nav a.button-href-wrapper {
 @media (min-width: 768px) {
 
   /* Remove the edge padding needed for mobile */
-  .marketing {
+  .games {
     padding-left: 0;
     padding-right: 0;
   }
@@ -250,17 +118,6 @@ ul.navbar-nav a.button-href-wrapper {
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
     border-radius: 4px;
-  }
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
   }
 
 }
