--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(xmlns:fb= 'https://www.facebook.com/2008/fbml')
+html(ng-app="wcbrazilApp")
 	head(prefix= 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# alarmclock_fig: http://ogp.me/ns/fb/alarmclock_fig#')
 		meta(charset='utf8')
 		meta(content= 'text/html; charset=utf-8', http-equiv= 'content-type')
