set the dt to 5 seconds for test

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,6 +55,10 @@ ul.navbar-nav a.button-href-wrapper {
   padding-bottom: 8px;
 }
 
+.navbar {
+  background: #404040;
+}
+
 /* GAMES CONTENT
 -------------------------------------------------- */
 
