--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -20,23 +20,25 @@ block content
           |  - 
           {{game.score[1]}}
 
-    #livefyre-comments.col-lg-6
+    .row 
+      #livefyre-comments.col-lg-6
+        | just blank things to test html
 
-    div(class='col-lg-6 bets' ng-controller='BetsCtrl')
-      table(class='table table-hover table-curved')
-        thead
-          tr
-            th
-            th And the winner is...
-            th
-        tbody
-          tr(ng-repeat='bet in bets' ng-class="{ 'success': bet.difference===1, 'danger': bet.difference===-1, 'warning': bet.difference===0 }")
-            td
-              {{$index+1}}
-            td 
-              {{bet.user}}
-            td
-              {{bet.points}}
+      div(class='col-lg-6 bets' ng-controller='BetsCtrl')
+        table(class='table table-hover table-curved')
+          thead
+            tr
+              th
+              th And the winner is...
+              th
+          tbody
+            tr(ng-repeat='bet in bets' ng-class="{ 'success': bet.difference===1, 'danger': bet.difference===-1, 'warning': bet.difference===0 }")
+              td
+                {{$index+1}}
+              td 
+                {{bet.user}}
+              td
+                {{bet.points}}
 
 
   //- Bootstrap core JavaScript
