--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,8 +12,9 @@ html(ng-app="wcbrazilApp")
 
 		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/app.css')
-		link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
-		link(rel='stylesheet', href='/bootstrap/css/social-buttons.css')
+		link(rel='stylesheet', href='/css/flip.css')
+		//- link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
+		//- link(rel='stylesheet', href='/bootstrap/css/social-buttons.css')
 	body
 		block header
 			include _header
