--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,6 +12,7 @@ html(ng-app="wcbrazilApp")
 
 		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/app.css')
+		link(rel='stylesheet', href='/css/app-responsive.css')
 		link(rel='stylesheet', href='/css/flip.css')
 		//- link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
 		//- link(rel='stylesheet', href='/bootstrap/css/social-buttons.css')
