--- a/public/css/app.css
+++ b/public/css/app.css
@@ -99,17 +99,17 @@ ul.navbar-nav a.button-href-wrapper {
   font-size: 14px;
 }
 
-.col-xs-3 {
+.col-sm-3 {
   margin-left: 5px;
   margin-right: 5px;
   width: 24%;
 }
-.col-xs-4 {
+.col-sm-4 {
   margin-left: 5px;
   margin-right: 5px;
   width: 31.6%;
 }
-.col-xs-6 {
+.col-sm-6 {
   margin-left: 5px;
   margin-right: 5px;
   width: 48.9%;
