--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="wcbrazilApp")
 	head(prefix= 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# alarmclock_fig: http://ogp.me/ns/fb/alarmclock_fig#')
 		meta(charset='utf8')
 		meta(content= 'text/html; charset=utf-8', http-equiv= 'content-type')
-		meta(http-equiv= 'X-UA-Compatible', content= 'chrome=1')
+		meta(http-equiv= 'X-UA-Compatible', content='IE=edge,chrome=1')
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		meta(name="description" content="")
 		meta(name="author" content="")
@@ -13,9 +13,9 @@ html(ng-app="wcbrazilApp")
 		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/app.css')
 		link(rel='stylesheet', href='/css/app-responsive.css')
+		link(rel='stylesheet', href='/css/app-browser.css')
 		link(rel='stylesheet', href='/css/flip.css')
-		//- link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
-		//- link(rel='stylesheet', href='/bootstrap/css/social-buttons.css')
+
 	body
 		block header
 			include _header
