--- a/public/css/app-responsive.css
+++ b/public/css/app-responsive.css
@@ -6,6 +6,9 @@
   .col-sm-3 {
     width: 23%;
   }
+  .col-sm-4 {
+    width: 31%;
+  }
   .col-sm-6 {
     width: 47.1%;
   }
@@ -34,6 +37,9 @@
 
 @media (max-width: 1000px) {
 
+  .col-sm-4 {
+    width: 31.2%;
+  }
   .col-sm-6 {
     width: 47.5%;
   }
@@ -65,6 +71,9 @@
 }
 
 @media (max-width: 768px) {
+  .col-sm-4 {
+    width: 31.1%;
+  }
   .col-sm-3 {
     width: 22.7%;
   }
@@ -78,6 +87,9 @@
 }
 
 @media (max-width: 568px) {
+  .col-sm-4 {
+    width: 30.8%;
+  }
   .col-sm-3 {
     width: 22.7%;
   }
