--- a/public/css/app.css
+++ b/public/css/app.css
@@ -129,6 +129,11 @@ ul.navbar-nav a.button-href-wrapper {
   margin-right: 5px;
   width: 48.9%;
 }
+.col-sm-12 {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 98.6%;
+}
 
 
 
