--- a/public/css/app.css
+++ b/public/css/app.css
@@ -184,6 +184,8 @@ ul.navbar-nav a.button-href-wrapper {
 
 .bets .table td:last-child {
   font-weight: bold;
+  text-align: right;
+  padding-right: 20px;
 }
 
 .bets .table td:first-child {
@@ -219,4 +221,8 @@ ul.navbar-nav a.button-href-wrapper {
 }
 .table-curved tr:last-child td:last-child {
     border-radius: 0 0 6px 0;
+}
+
+.daybet {
+  font-size: 14px;
 }
