--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -68,11 +68,11 @@ block content
         table(class='table table-hover table-curved')
           thead
             tr
-              th(colspan=8) And the winner is...
+              th(colspan=8) Live ranking
           tbody
             tr(ng-repeat='bet in bets')
               td
-                {{$index+1}}
+                {{bet.ranking === bets[$index-1].ranking ? '-' : bet.ranking}}
               td 
                 {{bet.user}}
               td(class='daybet' ng-repeat='b in bet.bets track by $index')
