--- a/app/views/_header.jade
+++ b/app/views/_header.jade
@@ -12,7 +12,7 @@ header
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href="#") WCBrazil
+            a.navbar-brand(href="#") 71 PLAYERS IN THE STARTING BLOCKS
           
           .collapse.navbar-collapse
             ul.nav.navbar-nav
