--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -15,6 +15,7 @@ html(ng-app="wcbrazilApp")
 		link(rel='stylesheet', href='/css/app-responsive.css')
 		link(rel='stylesheet', href='/css/app-browser.css')
 		link(rel='stylesheet', href='/css/flip.css')
+		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Anton')
 
 	body
 		block header
