--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -88,16 +88,7 @@ block content
   //- Bootstrap core JavaScript
   //- Placed at the end of the document so the pages load faster 
   script(src='/socket.io/socket.io.js')
-  script(src='bower_components/angular/angular.js')
-  script(src='bower_components/angular-route/angular-route.js')
-  script(src='bower_components/angular-socket-io/socket.js')
-  script(src='js/lib/jquery/jquery-2.0.3.min.js')
-  script(src='bootstrap/js/bootstrap.min.js')
-  script(src='bootstrap/js/holder.js')
-  script(src='js/app.js')
-  script(src='js/services.js')
-  script(src='js/controllers.js')
-  script(src='js/filters.js')
+  script(src='base-onefile.js')
   script(src='http://zor.livefyre.com/wjs/v3.0/javascripts/livefyre.js')
 
   //- Variables passed from expressjs.
