--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -10,11 +10,7 @@ html(ng-app="wcbrazilApp")
 		base(href='/')
 		title #{title}
 
-		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/css/app.css')
-		link(rel='stylesheet', href='/css/app-responsive.css')
-		link(rel='stylesheet', href='/css/app-browser.css')
-		link(rel='stylesheet', href='/css/flip.css')
+		link(rel='stylesheet', href='base-onefile.css')
 		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Anton')
 
 	body
