--- a/app/views/_header.jade
+++ b/app/views/_header.jade
@@ -12,4 +12,4 @@ header
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href="#") SAINT GEORGES SORT LES ARMES
+            a.navbar-brand(href="#") FIGHTING FOR 1 OF 16 TICKETS
