express.io --> express + socket.io

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html(ng-app="france2016App")
 	head(prefix= 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# alarmclock_fig: http://ogp.me/ns/fb/alarmclock_fig#')
 		meta(charset='utf8')
