--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -96,15 +96,30 @@ block content
 
   //- Livefyre comments
   script.
-    var articleId = fyre.conv.load.makeArticleId(null);
-    fyre.conv.load({}, [{
-        el: 'livefyre-comments',
-        network: "livefyre.com",
-        siteId: "358978",
-        articleId: articleId,
-        signed: false,
-        collectionMeta: {
-            articleId: articleId,
-            url: fyre.conv.load.makeCollectionUrl(),
-        }
-    }], function() {});
+    //- var articleId = fyre.conv.load.makeArticleId(null);
+    //- fyre.conv.load({}, [{
+    //-     el: 'livefyre-comments',
+    //-     network: "livefyre.com",
+    //-     siteId: "358978",
+    //-     articleId: articleId,
+    //-     signed: false,
+    //-     collectionMeta: {
+    //-         articleId: articleId,
+    //-         url: fyre.conv.load.makeCollectionUrl(),
+    //-     }
+    //- }], function() {});
+    
+    var networkConfig = {
+      network: 'localhost'
+    };
+    var convConfig = {
+      siteId: '358978',
+      articleId: '?',
+      el: 'livefyre-comments',
+      collectionMeta: '?',
+      checksum: '?'
+    };
+   
+    Livefyre.require(['fyre.conv#3'], function(Conv) {
+        new Conv(networkConfig, [convConfig], function(commentsWidget) {});
+    });
