--- a/public/css/anton.css
+++ b/public/css/anton.css
@@ -2,5 +2,5 @@
   font-family: 'Anton';
   font-style: normal;
   font-weight: 400;
-  src: local('Anton'), url(http://themes.googleusercontent.com/static/fonts/anton/v4/5t8vP9Hx2udzw372glmOxA.ttf) format('truetype');
+  src: local('Anton'), url(https://themes.googleusercontent.com/static/fonts/anton/v4/5t8vP9Hx2udzw372glmOxA.ttf) format('truetype');
 }
