--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -96,12 +96,12 @@ block content
 
   //- Livefyre comments
   script.
-    var articleId = '1234512345';
+    var articleId = '1234512345'; // anything
     var networkConfig = {
       network: 'livefyre.com'
     };
     var convConfig = {
-      siteId: '358978',
+      siteId: '382607',
       articleId: articleId,
       el: 'livefyre-comments'
     };   
