--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -96,7 +96,7 @@ block content
 
   //- Livefyre comments
   script.
-    var articleId = '1234512345'; // anything
+    var articleId = '1464490717117';
     var networkConfig = {
       network: 'livefyre.com'
     };
