--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(ng-app="france2016App")
+html(ng-app="russia2018App")
 	head(prefix= 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# alarmclock_fig: http://ogp.me/ns/fb/alarmclock_fig#')
 		meta(charset='utf8')
 		meta(content= 'text/html; charset=utf-8', http-equiv= 'content-type')
