relative path for static files

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -10,7 +10,7 @@ html(ng-app="russia2018App")
 		base(href='/')
 		title #{title}
 
-		link(rel='stylesheet', href='base-onefile.css')
+		link(rel='stylesheet', href='./base-onefile.css')
 
 	body
 		block header
