base for static files

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -85,7 +85,7 @@ block content
 
   //- Bootstrap core JavaScript
   //- Placed at the end of the document so the pages load faster
-  script(src='./base-onefile.js')
+  script(src='base-onefile.js')
 
   //- Variables passed from expressjs.
   script.
