--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,16 +1,16 @@
 doctype html
 html(ng-app="russia2018App")
-	head(prefix= 'og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# alarmclock_fig: http://ogp.me/ns/fb/alarmclock_fig#')
+	head(prefix='')
 		meta(charset='utf8')
 		meta(content= 'text/html; charset=utf-8', http-equiv= 'content-type')
 		meta(http-equiv= 'X-UA-Compatible', content='IE=edge,chrome=1')
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		meta(name="description" content="")
 		meta(name="author" content="")
-		base(href='/')
+		base(href='russia2018/')
 		title #{title}
 
-		link(rel='stylesheet', href='./base-onefile.css')
+		link(rel='stylesheet', type="text/css", href='base-onefile.css')
 
 	body
 		block header
