--- a/public/css/app.css
+++ b/public/css/app.css
@@ -80,7 +80,7 @@ ul.navbar-nav a.button-href-wrapper {
 .navbar>.container .navbar-brand {
   font-family: 'Anton';
   font-size: 42px;
-  color: #1878d8;
+  color: #BE131A;
   margin: 0;
   padding: 0;
 }
