use local websocket

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -91,3 +91,5 @@ block content
   script.
     var games = !{JSON.stringify(games)}
     var bets = !{JSON.stringify(bets)}
+    var websocketHost = !{JSON.stringify(websocketHost)}
+    var websocketPath = !{JSON.stringify(websocketPath)}
