--- a/app/views/_header.jade
+++ b/app/views/_header.jade
@@ -12,4 +12,4 @@ header
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href="#") RUSSIA 2018
+            a.navbar-brand(href="#") Arlon is the Capital of the World
