--- a/public/css/app-responsive.css
+++ b/public/css/app-responsive.css
@@ -36,6 +36,10 @@
     height: 48px;
   }
 
+  .chart {
+    height: 100px;
+  }
+
 }
 
 @media (max-width: 1024px) {
@@ -83,7 +87,7 @@
   }
 
   .chart {
-    height: 100px;
+    height: 70px;
   }
 
 }
@@ -109,7 +113,7 @@
   }
 
   .chart {
-    height: 85px;
+    height: 60px;
   }
 
 }
